# LeakDetector

./: .gitignore  LICENSE  LeakDetector.sln  readme.md
.workbuddy/memory/: 2026-05-20.md  MEMORY.md
docs/: learning-and-development-plan.md  mc_include.md  readme.md
examples/array_leak/: CMakeLists.txt  build.ps1  expected_output.txt  main.cpp
examples/exception_leak/: CMakeLists.txt  build.ps1  expected_output.txt  main.cpp
examples/multi_leak/: CMakeLists.txt  build.ps1  expected_output.txt  main.cpp
examples/no_leak/: CMakeLists.txt  build.ps1  expected_output.txt  main.cpp
examples/simple_leak/: CMakeLists.txt  build.bat  build.ps1  expected_output.txt  main.cpp
include/: leak_detector.cpp  leak_detector.h
src/LeakDetector.Analyzers/: Class1.cs
src/LeakDetector.CLI/: Program.cs
src/LeakDetector.Core/: LeakDetector.Core.csproj
src/LeakDetector.Parsers/: Class1.cs
src/LeakDetector.Reporters/: Class1.cs
src/LeakDetector.Tests/: UnitTest1.cs
